2012-10-16  Tony Chang  <tony@chromium.org>

        Unreviewed, broaden Chromium TestExpectations to match waterfall.

        * platform/chromium/TestExpectations:

2012-10-16  Dana Jansens  <danakj@chromium.org>

        Rebaseline mac compositing/geometry/fixed-position-transform-composited-page-scale-down.html
        https://bugs.webkit.org/show_bug.cgi?id=89702

        Unreviewed gardening.

        * platform/chromium-mac-snowleopard/compositing/geometry/fixed-position-transform-composited-page-scale-down-expected.png: Removed.
        * platform/chromium-mac/compositing/geometry/fixed-position-transform-composited-page-scale-down-expected.png:
        * platform/chromium/TestExpectations:

2012-10-16  Tony Chang  <tony@chromium.org>

        Unreviewed, fix TestExpectations for Qt and GTK after RenderSlider change.

        * platform/gtk/TestExpectations:
        * platform/gtk/media/video-volume-slider-expected.txt:
        * platform/qt/TestExpectations:

2012-10-16  Dana Jansens  <danakj@chromium.org>

        Rebaseline for css1/basic/inheritance.html

        Unreviewed gardening.

        * platform/chromium-mac/css1/basic/inheritance-expected.png:

2012-10-16  Dana Jansens  <danakj@chromium.org>

        Web Inspector: inspector/styles/styles-history.html is failing Text on win7
        https://bugs.webkit.org/show_bug.cgi?id=99519

        Unreviewed gardening.

        * platform/chromium/TestExpectations:

2012-10-16  Dana Jansens  <danakj@chromium.org>

        Rebaselines for r131503
        https://bugs.webkit.org/show_bug.cgi?id=99516

        Unreviewed gardening.

        * platform/chromium/TestExpectations:

2012-10-16  Tony Chang  <tony@chromium.org>

        Unreviewed, fix lint error in chromium-android/TestExpectations.

        * platform/chromium-android/TestExpectations:

2012-10-16  Tony Chang  <tony@chromium.org>

        Unreviewed, lint fixes for TestExpectations.

        * platform/chromium/TestExpectations:
