@@ -1,0 +1,12 @@
+This test checks that Page Visibility state values are correct when a document has no defaultView.
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+
+PASS subdocument.defaultView == null is true
+PASS subdocument.webkitVisibilityState is "hidden"
+PASS subdocument.webkitHidden is true
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
