@@ -1,0 +1,20 @@
+<html>
+<head>
+<script src="../js/resources/js-test-pre.js"></script>
+
+<script>
+
+description("This test checks that Page Visibility state values are correct when a document has no defaultView.");
+
+var subdocument = document.implementation.createDocument('http://www.w3.org/1999/xhtml', 'html', null);
+
+shouldBeTrue("subdocument.defaultView == null");
+shouldBeEqualToString("subdocument.webkitVisibilityState", "hidden");
+shouldBeTrue("subdocument.webkitHidden");
+
+</script>
+
+<script src="../js/resources/js-test-post.js"></script>
+
+</head>
+</html>
