@@ -1,3 +1,15 @@
+2012-10-16  James Simonsen  <simonjam@chromium.org>
+
+        [Page Visibility API] View-less documents should report as hidden
+        https://bugs.webkit.org/show_bug.cgi?id=99410
+
+        Reviewed by Tony Gentilcore.
+
+        Test: fast/events/page-visibility-null-view.html
+
+        * dom/Document.cpp:
+        (WebCore::Document::visibilityState):
+
 2012-10-16  Michael Saboff  <msaboff@apple.com>
 
         Change WTF_USE_8BIT_TEXTRUN to ENABLE_8BIT_TEXTRUN
