@@ -1,3 +1,13 @@
+2012-10-16  James Simonsen  <simonjam@chromium.org>
+
+        [Page Visibility API] View-less documents should report as hidden
+        https://bugs.webkit.org/show_bug.cgi?id=99410
+
+        Reviewed by Tony Gentilcore.
+
+        * fast/events/page-visibility-null-view-expected.txt: Added.
+        * fast/events/page-visibility-null-view.html: Added.
+
 2012-10-16  Tony Chang  <tony@chromium.org>
 
         Unreviewed, broaden Chromium TestExpectations to match waterfall.
